fix: Fixed issues with tracking device, device verification, vehicle creation and device assignment to vehicle
